k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-backend
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: backend
  selector:
    app: demo-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
spec:
  selector:
    matchLabels:
      app: demo-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-backend
    spec:
      containers:
        - image: ademide/demo-backend
          name: demo-backend
          ports:
            - containerPort: 8080
